feat: Made the MVP
Error: I dont understand how event flows

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
-    <script  src="index.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script  src="index.js" defer></script>
 </head>
 <body>
+    <h1 class="title">ROCK VS PAPER VS SCISSOR</h1>
+    <div class="content">
+        <div class="options">
+            <button class="playRound">Play Round</button>
+        </div>
+        <div class="scoreBoard">
+            <h2 >Score</h2>
+            <div class="score">
+                <h1 class="playerScore">0</h1>
+                <h1>-</h1>
+                <h1 class="compScore">0</h1>
+            </div>
+        </div>
+    </div>
+    
     
 </body>
 </html>
